TS_MODIFY doesn't handle positional updates when filter is empty

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This call assumes that we will have a residual predicate, but that is not a guarantee. Also, we should be using the original, unsplit filter for this step, since the positional operator can reference either the meta field or a metric field.

            Assignee:
            Alyssa Clark (Inactive)
            Reporter:
            Alyssa Clark (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: