SERVER-77431 Handle positional updates w/empty or meta-only filter in TS_MODIFY